tests/rosetta/out/C/100-doors.error
cc: exit status 1
/tmp/100-doors.c: In function ‘main’:
/tmp/100-doors.c:40:12: error: subscripted value is neither array nor pointer nor vector
   40 |       doors[idx] = (!doors.data[idx]);
      |            ^
/tmp/100-doors.c:49:36: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   49 |         char *tmp2 = concat_string(line, "1");
      |                                    ^~~~
/tmp/100-doors.c:21:34: note: expected ‘char *’ but argument is of type ‘const char *’
   21 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
/tmp/100-doors.c:52:36: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   52 |         char *tmp3 = concat_string(line, "0");
      |                                    ^~~~
/tmp/100-doors.c:21:34: note: expected ‘char *’ but argument is of type ‘const char *’
   21 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
/tmp/100-doors.c:56:36: warning: passing argument 1 of ‘concat_string’ discards ‘const’ qualifier from pointer target type [-Wdiscarded-qualifiers]
   56 |         char *tmp4 = concat_string(line, " ");
      |                                    ^~~~
/tmp/100-doors.c:21:34: note: expected ‘char *’ but argument is of type ‘const char *’
   21 | static char *concat_string(char *a, char *b) {
      |                            ~~~~~~^
