tests/rosetta/out/C/100-doors.c
// Generated by Mochi compiler v0.10.26 on 2025-07-16T11:37:13Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
int main() {
  list_int doors = list_int_create(0);
  for (int i = 0; i < 100; i++) {
    list_int tmp1 = list_int_create(1);
    tmp1.data[0] = 0;
    doors = tmp1;
  }
  for (int pass = 1; pass < 101; pass++) {
    int idx = pass - 1;
    while (idx < 100) {
      doors[idx] = (!doors.data[idx]);
      idx = idx + pass;
    }
  }
  for (int row = 0; row < 10; row++) {
    const char *line = "";
    for (int col = 0; col < 10; col++) {
      int idx = row * 10 + col;
      if ((doors.data[idx] != 0)) {
        char *tmp2 = concat_string(line, "1");
        line = tmp2;
      } else {
        char *tmp3 = concat_string(line, "0");
        line = tmp3;
      }
      if (col < 9) {
        char *tmp4 = concat_string(line, " ");
        line = tmp4;
      }
    }
    printf("%s\n", line);
  }
  return 0;
}
